--- a/project-4-Webservice-Calls/F2VsCodeExtensionPoC/package.json
+++ b/project-4-Webservice-Calls/F2VsCodeExtensionPoC/package.json
@@ -12,11 +12,13 @@
   "activationEvents": [],
   "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "extension-poc.GetWord",
-      "title": "Hello World"
-    }],
-    "keybindings":[
+    "commands": [
+      {
+        "command": "extension-poc.GetWord",
+        "title": "Hello World"
+      }
+    ],
+    "keybindings": [
       {
         "command": "extension-poc.GetWord",
         "key": "ctrl+alt+w"
@@ -29,11 +31,14 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.96.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
-    "eslint": "^9.19.0",
+    "@types/vscode": "^1.96.0",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.19.0"
+  },
+  "dependencies": {
+    "axios": "^1.7.9"
   }
 }
