--- a/Webservice_Host/F2VsCodeExtensionPoC/f2vscodeextensionpoc/package.json
+++ b/Webservice_Host/F2VsCodeExtensionPoC/f2vscodeextensionpoc/package.json
@@ -9,13 +9,17 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "*"
+  ],
   "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "f2vscodeextensionpoc.helloWorld",
-      "title": "Hello World"
-    }]
+    "commands": [
+      {
+        "command": "f2vscodeextensionpoc.helloWorld",
+        "title": "Hello World"
+      }
+    ]
   },
   "scripts": {
     "lint": "eslint .",
@@ -23,11 +27,14 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.97.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
-    "eslint": "^9.19.0",
+    "@types/vscode": "^1.97.0",
     "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.4.1"
+    "@vscode/test-electron": "^2.4.1",
+    "eslint": "^9.19.0"
+  },
+  "dependencies": {
+    "express": "^4.21.2"
   }
 }
