added CopyAsF2YamlReference command

--- a/f2toolinterface/package.json
+++ b/f2toolinterface/package.json
@@ -14,8 +14,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "f2toolinterface.helloWorld",
-        "title": "Hello World"
+        "command": "f2toolinterface.CopyAsF2YamlReference",
+        "title": "Copy As Yaml Reference"
       }
     ]
   },
