--- a/f2toolinterface/package.json
+++ b/f2toolinterface/package.json
@@ -33,7 +33,46 @@
         "key": "ctrl+shift+4",
         "when": "editorTextFocus"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "F2ToolInterface",
+      "properties": {
+        "F2ToolInterface.ignoreWords": {
+          "type": "array",
+          "description": "Words to remove from the extracted YAML path.",
+          "items": {
+            "type": "string"
+          },
+          "default": [
+            "EstimatedTODO",
+            "DraftingTODO",
+            "TODO",
+            "Estimated",
+            "OnGoing",
+            "OnHold",
+            "Cancelled",
+            "Paused",
+            "InProgress",
+            "Done",
+            "CurrentFocus",
+            "Blocked",
+            "Drafting",
+            "Draft",
+            "Reviewed",
+            "InDev",
+            "Developing",
+            "InQA",
+            "BugFixing",
+            "QAPassed"
+          ]
+        },
+        "F2ToolInterface.PathSeparator": {
+          "type": "string",
+          "description": "The separator to use in the extracted YAML path.",
+          "default": "."
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
