command insertTemplate will insert hi at the current position

--- a/timetrackerex/package.json
+++ b/timetrackerex/package.json
@@ -14,8 +14,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "timetrackerex.helloWorld",
-        "title": "Hello World"
+        "command": "timetrackerex.insertTemplate",
+        "title": "Insert Template"
       }
     ]
   },
