--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,29 @@ node_modules
 .vscode-test/
 *.vsix
 bin/
+
+# Node.js dependencies
+package-lock.json
+
+# VS Code build files
+.vscode/
+out/
+dist/
+
+# TypeScript build files
+*.js
+*.js.map
+*.d.ts
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# VS Code test results
+coverage/
+test-results/
+
+# Environment variables (if any)
+.env
