added a timeTracker command that would write hi at the end of a line

--- a/timetrackerex/package.json
+++ b/timetrackerex/package.json
@@ -16,6 +16,10 @@
       {
         "command": "timetrackerex.insertTemplate",
         "title": "Insert Template"
+      },
+      {
+        "command": "timetrackerex.timeTracker",
+        "title": "Time Tracker"
       }
     ],
     "configuration": {
